--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vishruti's Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css">
@@ -71,18 +71,18 @@
     <div class="education">
             <div class="ssc">
                 <h4>SSC</h4>
-                <h5>Nalanda High School</h5>
+                <h5 class="mt-3">Nalanda High School</h5>
                 <h5>CGPA : 9.8 / 10</h5>
 
             </div>
             <div class="inter">
                 <h4>Intermediate</h4>
-                <h5>SR Junior College</h5>
+                <h5 class="mt-3">SR Junior College</h5>
                 <h5>Marks : 982 / 1000</h5>
             </div>
             <div class="btech">
                 <h4>B.Tech</h4>
-                <h5>Kakatiya Institute of Technology and Science for Women</h5>
+                <h5 class="mt-3">Kakatiya Institute of Technology and Science for Women</h5>
                 <h5>Branch: Computer Science and Engineering</h5>
                 <h5>CGPA: 8.65 / 10</h5>
             </div>
@@ -97,7 +97,7 @@
             <div class="container">
                 <div class="row">
                   <div class="col-12 col-md-6 col-lg-4 mb-4">
-                   <div class="card" style="width: 22rem;">
+                   <div class="card" >
                     <div class="card-header">
                    Placement Assistance System
                   </div>
@@ -111,15 +111,12 @@
                     students for a particular job role and directly
                     contact them via email.<br><br>3. Students can view list of recommended
                     companies based on their skills and academic
-                    performance and they can also upload their
-                    resumes that can be viewed by the
-                    companies. Students can also edit their
-                    profile information.</p>
+                    performance</p>
                 </div>
               </div>
               </div>
               <div class="col-12 col-md-6 col-lg-4 mb-4">
-              <div class="card" style="width: 22rem;">
+              <div class="card" >
                 <div class="card-header">
                    Image Cartoonizer Using Python
                   </div>
@@ -135,13 +132,19 @@
             </div>
               
               <div class="col-12 col-md-6 col-lg-4 mb-4">
-              <div class="card" style="width: 22rem;">
+              <div class="card">
                 <div class="card-header">
-                    BMI Calculator
+                    PetPal Website
                   </div>
-                <img src="./images/bmi.png" class="card-img-top" alt="...">
+                <img src="./images/petpal.png" class="card-img-top" alt="..." id="petpal">
                 <div class="card-body">
-                  <p class="card-text">1. Developed a BMI (Body Mass Index) calculator application that evaluates an individual's health status based on their weight (in kg) and height (in meters). <br><br>2. The application categorizes users into different health ranges, including overweight, obese, normal, and healthy, providing valuable insights into their fitness level. </p>
+                  <p class="card-text">
+
+                   1. Designed and developed a responsive Petpal website using HTML, CSS, Bootstrap, and JavaScript to enhance user experience and perform form validations.
+                   <br>
+                   2. Implemented responsive design principles to ensure the website functions effectively on various screen sizes.
+
+                     </p>
                 </div>
               </div>
               </div>
@@ -162,6 +165,7 @@
                             <li><i class="fa-brands fa-html5" style="color: #4dea67;"></i>&nbsp;HTML</li>
                             <li><i class="fa-brands fa-css3-alt" style="color: #063484;"></i>&nbsp;CSS</li>
                             <li><i class="fa-brands fa-js" style="color: #ef5d1f;"></i>&nbsp;JavaScript</li>
+                            <li><img src="./images/mern.png" height="50px" width="50px" alt="" style="margin:-17px;margin-top:1px;">&emsp;MERN Stack</li>
                         </ul>
                 </div>
                 <div class="right">
@@ -195,7 +199,7 @@
     <h1>Contact Me</h1><br>
     <div class="contactme">
         <div><i class="fa-solid fa-envelope" style="color: #fb3123;"></i>&nbsp;vishrutibuddhadev1405@gmail.com</div>
-        <div><i class="fa-solid fa-phone" style="color: #1bd818;"></i>&nbsp; 8374672666</div>
+        <div><i class="fa-solid fa-phone" style="color: #1bd818;"></i>&nbsp; 1234567890</div>
         <div><i class="fa-solid fa-location-dot" style="color: #68b4ee;"></i>&nbsp; Nizamabad</div>
     </div>
 </section>
