modified image path

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p>As a fresher, I am looking for a position that allows me to continue to learn and develop my skills while doing high
                     quality work and encouraging me to flourish.</p></div>
         <div class="right">
-            <img src="./images/img.jpeg">
+            <img src="./images/img.jpg">
         </div>
     </div>
     
